--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-   "start": "nodemon --exec ts-node index.ts"
+    "start": "nodemon --exec ts-node index.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,9 @@
     "@types/express": "^5.0.2",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "node-cron": "^4.1.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
