--- a/package.json
+++ b/package.json
@@ -1,47 +1,24 @@
 {
-  "name": "meoww",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
-  "workspaces": ["client", "server"],
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fmt": "bun prettier -w ."
+    "fmt": "pnpm prettier -w ."
   },
   "dependencies": {
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.5",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/postcss": "^4.1.8",
-    "@types/autocannon": "^7.12.7",
-    "autocannon": "^8.0.0",
-    "axios": "^1.9.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.513.0",
-    "motion": "^12.16.0",
-    "next": "15.3.3",
-    "next-themes": "^0.4.6",
-    "postcss": "^8.5.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.8",
-    "zustand": "^5.0.5"
+    "@tanstack/react-query": "^5.84.1",
+    "react": "^19",
+    "react-dom": "^19",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5",
     "@types/bun": "latest"
   }
 }
