--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "meoww",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -11,14 +11,32 @@
     "fmt": "pnpm prettier -w ."
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.84.1",
-    "react": "^19",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/react-query": "^5.84.2",
+    "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
+    "next": "^15.4.6",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "react": "^19.1.1",
     "react-dom": "^19",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.6",
+    "typescript": "^5.9.2",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bun": "latest"
+    "prettier-plugin-tailwindcss": "^0.6.14"
   }
 }
