--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fmt": "pnpm prettier -w ."
+    "fmt": "bun prettier -w ."
   },
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.7",
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.84.2",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
+    "eslint": "^9.33.0",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "^15.4.6",
@@ -37,6 +38,7 @@
     "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint-config-next": "^15.4.6",
     "prettier-plugin-tailwindcss": "^0.6.14"
   }
 }
